# e3j_v2

./: .gitignore  README.md  clebsch_gordan.py  clebsch_gordan_test.py  constants.py  geometric_utils.py  graph_utils.py  irrep.py  irrep_test.py  model.py  model2.py  parity.py  pyproject.toml  radial_basis_test.py  requirements.txt  spherical_harmonic.py  spherical_harmonic_playground.py  spherical_harmonics.py  spherical_harmonics_playground.py  spherical_harmonics_test.py  tensor_product.py  tensor_product_test.py  test_equivariance.py  tetris.py  tetris2.py  tetris_inference.py  tetris_simple.py  train.py  utils.py
e3simple_examples/: test_equivariance.py  tetris.py  tetris_data.py  tetris_inference.py  tetris_simple.py
examples/: test_equivariance.py  tetris.py  tetris_inference.py  tetris_simple.py
o3/: clebsch_gordan.py  irrep.py  irrep_test.py  model.py  radial_basis.py  radial_basis_test.py  spherical_harmonics.py  spherical_harmonics_test.py  sympy_playground.py  tensor_product_test.py
utils/: dummy_data_utils.py  equivariance_test_utils.py  geometric_utils.py  graph_utils.py  model_utils.py  rot_utils.py  spherical_harmonics_utils.py
