[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e3simple"
version = "0.1.0"
description = "The simplest equivariant graph neural network library"
authors = [
    { name="Curtis Chong", email="curtischong5@gmail.com" }
]

[tool.setuptools]
packages = ["o3", "e3simple_examples", "utils"]